feat: projects && generic models

--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -107,4 +107,12 @@
 	<li [routerLink]="['/global-reporting/bills', 1]" routerLinkActive="active">
 		<a>Factures par client</a>
 	</li>
+
+	<li routerLink="/global-reporting/projects" routerLinkActive="active">
+		<a>Projets</a>
+	</li>
+
+	<li [routerLink]="['/global-reporting/projects', 1]" routerLinkActive="active">
+		<a>Projets par client</a>
+	</li>
 </ul>
