--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -1,56 +1,110 @@
-<div
-	fxFill
-	fxLayout="column"
-	[ngStyle]="{'min-width':'800px', 'max-width':'1200px', 'flex-basis':'auto', 'border-width':'2px', 'border-style':'dashed', 'border-color':'white'}"
->
-	<div fxFlex="50" fxLayout="row">
-		<div fxFlex="40" fxLayout="column">
-			<div fxFlex="50" fxLayout="row">
-				<div fxFlex="70" fxLayoutAlign="space-around center" [ngStyle]="{'background-color':'blue'}">
-					<app-business-situation-table fxFlex="100"></app-business-situation-table>
+<div>
+	<div>
+		<nb-card accent="info">
+			<nb-card-header>Consommation</nb-card-header>
+			<nb-card-body>
+				<div class="row">
+					<div class="col-6">
+						<nb-card accent="info" fxFlexFill fxLayout="column">
+							<nb-card-header>Situation commerciale</nb-card-header>
+							<nb-card-body>
+								<div class="row">
+									<div class="col-6">
+										<nb-card fxFlexFill fxLayout="column">
+											<nb-card-body>
+												<app-business-situation-table></app-business-situation-table>
+											</nb-card-body>
+										</nb-card>
+									</div>
+									<div class="col-6">
+										<nb-card fxFlexFill fxLayout="column">
+											<nb-card-body>
+												<app-mrr-table></app-mrr-table>
+											</nb-card-body>
+										</nb-card>
+									</div>
+								</div>
+								<div class="row mt-3">
+									<div class="col-md-6 offset-md-3">
+										<nb-card>
+											<nb-card-body>
+												<app-performance-gauge-chart></app-performance-gauge-chart>
+											</nb-card-body>
+										</nb-card>
+									</div>
+								</div>
+							</nb-card-body>
+						</nb-card>
+					</div>
+					<div class="col-6">
+						<nb-card accent="info" fxFlexFill fxLayout="column">
+							<nb-card-header>Signatures</nb-card-header>
+							<nb-card-body>
+								<app-signature-line-chart></app-signature-line-chart>
+							</nb-card-body>
+						</nb-card>
+					</div>
 				</div>
-				<div fxFlex="30" fxLayoutAlign="space-around center" [ngStyle]="{'background-color':'purple'}">
-					<app-mrr-table fxFlex="100"></app-mrr-table>
+			</nb-card-body>
+		</nb-card>
+	</div>
+	<div class="mt-3">
+		<nb-card accent="info">
+			<nb-card-header>Projets</nb-card-header>
+			<nb-card-body>
+				<div class="row">
+					<div class="col-6 col-md-4">
+						<nb-card accent="info" fxFlexFill fxLayout="column">
+							<nb-card-header>Synthèse</nb-card-header>
+							<nb-card-body>
+								<app-synthesis-projects-table></app-synthesis-projects-table>
+							</nb-card-body>
+						</nb-card>
+					</div>
+					<div class="col-12 col-md-8">
+						<nb-card accent="info" fxFlexFill fxLayout="column">
+							<nb-card-header>Détails des projets</nb-card-header>
+							<nb-card-body>
+								<app-projects-simple-table></app-projects-simple-table>
+							</nb-card-body>
+						</nb-card>
+					</div>
 				</div>
-			</div>
-			<div fxFlex="50" fxLayoutAlign="space-around center" [ngStyle]="{'background-color':'orange'}">
-				<app-performance-gauge-chart fxFlex="50"></app-performance-gauge-chart>
-			</div>
-		</div>
-		<div fxFlex="60" fxLayoutAlign="space-around center" [ngStyle]="{'background-color':'brown'}">
-			<app-signature-line-chart fxFlex="100"></app-signature-line-chart>
-		</div>
+			</nb-card-body>
+		</nb-card>
 	</div>
-	<div fxFlex="25" fxLayout="row" [ngStyle]="{'border-width':'2px', 'border-style':'dashed', 'border-color':'white'}">
-		<div fxFlex="30" fxLayoutAlign="space-around center" [ngStyle]="{'background-color':'yellow'}">
-			<app-synthesis-projects-table fxFlex="100"></app-synthesis-projects-table>
+	<div class="row mt-3">
+		<div class="col-6" [ngStyle]="{'min-width':'600px'}">
+			<nb-card accent="info" fxFlexFill fxLayout="column">
+				<nb-card-header>Facture</nb-card-header>
+				<nb-card-body>
+					<app-bills-simple-table></app-bills-simple-table>
+				</nb-card-body>
+			</nb-card>
 		</div>
-		<div fxFlex="70" fxLayoutAlign="space-around center" [ngStyle]="{'background-color':'grey'}">
-			<app-projects-simple-table fxFlex="100"></app-projects-simple-table>
-		</div>
-	</div>
-	<div fxFlex="25" fxLayout="row">
-		<div
-			fxFlex="50"
-			fxLayoutAlign="space-around center"
-			[ngStyle]="{'background-color':'teal', 'overflow':'hidden'}"
-		>
-			<app-bills-simple-table fxFlex="100"></app-bills-simple-table>
-		</div>
-		<div fxFlex="50">
-			<div fxFlex="20" fxLayoutAlign="space-around center" [ngStyle]="{'background-color':'pink'}">
-				<app-satisfaction-doughnut-chart fxFlex="100"></app-satisfaction-doughnut-chart>
-			</div>
-			<div fxFlex="80" fxLayoutAlign="space-around center" [ngStyle]="{'background-color':'coral'}">
-				<app-tickets-bar-chart fxFlex="100"></app-tickets-bar-chart>
+		<div class="col-6" [ngStyle]="{'min-width':'600px'}">
+			<div class="row mt-3">
+				<div class="col-6 col-md-4">
+					<nb-card accent="info" fxFlexFill fxLayout="column">
+						<nb-card-header>Satisfaction</nb-card-header>
+						<nb-card-body>
+							<app-satisfaction-doughnut-chart></app-satisfaction-doughnut-chart>
+						</nb-card-body>
+					</nb-card>
+				</div>
+				<div class="col-12 col-md-8">
+					<nb-card accent="info" fxFlexFill fxLayout="column">
+						<nb-card-header>Tickets</nb-card-header>
+						<nb-card-body>
+							<app-tickets-bar-chart></app-tickets-bar-chart>
+						</nb-card-body>
+					</nb-card>
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
 <ul>
-	<li routerLink="/global-reporting/bills" routerLinkActive="active">
-		<a>Factures</a>
-	</li>
 
 	<li [routerLink]="['/global-reporting/bills', 1]" routerLinkActive="active">
 		<a>Factures par client</a>
