Space between Facture, Satisfaction and tickets fixed

--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -74,7 +74,7 @@
 		</nb-card>
 	</div>
 	<div class="row mt-3">
-		<div class="col-6" [ngStyle]="{'min-width':'600px'}">
+		<div class="col-6 mt-3" [ngStyle]="{'min-width':'600px'}">
 			<nb-card accent="info" fxFlexFill fxLayout="column">
 				<nb-card-header>Facture</nb-card-header>
 				<nb-card-body>
