add bill to feature lists

--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -104,7 +104,11 @@
 		</div>
 	</div>
 </div>
+
 <ul>
+	<li routerLink="/global-reporting/bills" routerLinkActive="active">
+		<a>Factures</a>
+	</li>
 
 	<li [routerLink]="['/global-reporting/bills', 1]" routerLinkActive="active">
 		<a>Factures par client</a>
