--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -141,4 +141,12 @@
 	<li [routerLink]="['/global-reporting', 'projects', 2]" routerLinkActive="active">
 		<a>Projets par client</a>
 	</li>
+
+	<li [routerLink]="['/global-reporting', 'tickets']" routerLinkActive="active">
+		<a>Support</a>
+	</li>
+
+	<li [routerLink]="['/global-reporting', 'tickets', 3]" routerLinkActive="active">
+		<a>Support par client</a>
+	</li>
 </ul>
