--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -1,17 +1,17 @@
 <div>
-	<div>
+	<div [ngStyle]="{'min-width':'500px'}">
 		<nb-card accent="info">
 			<nb-card-header>Consommation</nb-card-header>
 			<nb-card-body>
 				<div class="row">
-					<div class="col-6">
+					<div class="col-6" [ngStyle]="{'min-width':'450px'}">
 						<nb-card accent="info" fxFlexFill fxLayout="column">
 							<nb-card-header>Situation commerciale</nb-card-header>
-							<nb-card-body>
-								<div class="row">
-									<div class="col-6">
+							<nb-card-body [ngStyle]="{'overflow':'hidden'}">
+								<div class="row" [ngStyle]="{'height':'50%'}">
+									<div class="col-6" [ngStyle]="{'min-width':'200px'}">
 										<nb-card fxFlexFill fxLayout="column">
-											<nb-card-body>
+											<nb-card-body class="p-0">
 												<app-smart-table
 													[settings]="businessStateSettings"
 													[source]="businessState"
@@ -20,9 +20,9 @@
 											</nb-card-body>
 										</nb-card>
 									</div>
-									<div class="col-6">
+									<div class="col-6" [ngStyle]="{'min-width':'200px'}">
 										<nb-card fxFlexFill fxLayout="column">
-											<nb-card-body>
+											<nb-card-body class="p-0">
 												<app-smart-table
 													[settings]="mrrSettings"
 													[source]="mrr"
@@ -32,7 +32,7 @@
 										</nb-card>
 									</div>
 								</div>
-								<div class="row mt-3">
+								<div class="row mt-3" [ngStyle]="{'height':'50%', 'min-width':'200px'}">
 									<div class="col-md-6 offset-md-3">
 										<nb-card>
 											<nb-card-body>
@@ -44,7 +44,7 @@
 							</nb-card-body>
 						</nb-card>
 					</div>
-					<div class="col-6">
+					<div class="col-6" [ngStyle]="{'min-width':'450px'}">
 						<nb-card accent="info" fxFlexFill fxLayout="column">
 							<nb-card-header>Signatures</nb-card-header>
 							<nb-card-body>
@@ -56,15 +56,15 @@
 			</nb-card-body>
 		</nb-card>
 	</div>
-	<div class="mt-3">
+	<div class="mt-3" [ngStyle]="{'min-width':'600px'}">
 		<nb-card accent="info">
 			<nb-card-header>Projets</nb-card-header>
 			<nb-card-body>
 				<div class="row">
-					<div class="col-6 col-md-4">
+					<div class="col-6 col-md-4" [ngStyle]="{'min-width':'200px'}">
 						<nb-card accent="info" fxFlexFill fxLayout="column">
 							<nb-card-header>Synthèse</nb-card-header>
-							<nb-card-body>
+							<nb-card-body class="p-0">
 								<app-smart-table
 									[settings]="projectsSynthesisSettings"
 									[source]="projectsSynthesis"
@@ -73,7 +73,7 @@
 							</nb-card-body>
 						</nb-card>
 					</div>
-					<div class="col-12 col-md-8">
+					<div class="col-12 col-md-8" [ngStyle]="{'min-width':'600px'}">
 						<nb-card accent="info" fxFlexFill fxLayout="column">
 							<nb-card-header>
 								<div class="row">
@@ -104,7 +104,7 @@
 		</nb-card>
 	</div>
 	<div class="row mt-3">
-		<div class="col-5" [ngStyle]="{'min-width':'200px'}">
+		<div class="col-5" [ngStyle]="{'min-width':'550px'}">
 			<nb-card accent="info" fxFlexFill fxLayout="column">
 				<nb-card-header>
 					<div class="row">
@@ -126,11 +126,12 @@
 						[source]="invoices"
 						[hasPager]="false"
 						(onClientClick)="goToClientInvoices($event)"
-					></app-smart-table>
+					>
+					</app-smart-table>
 				</nb-card-body>
 			</nb-card>
 		</div>
-		<div class="col-2" [ngStyle]="{'min-width':'200px'}">
+		<div class="col-2" [ngStyle]="{'min-width':'150px'}">
 			<nb-card accent="info" fxFlexFill fxLayout="column">
 				<nb-card-header>Satisfaction</nb-card-header>
 				<nb-card-body fxLayoutAlign="center center">
@@ -138,7 +139,7 @@
 				</nb-card-body>
 			</nb-card>
 		</div>
-		<div class="col-5">
+		<div class="col-5" [ngStyle]="{'min-width':'500px'}">
 			<nb-card accent="info" fxFlexFill fxLayout="column">
 				<nb-card-header>
 					<div class="row">
