--- a/src/features/customer-reporting/dashboard/pages/customer-reporting-dashboard.page.html
+++ b/src/features/customer-reporting/dashboard/pages/customer-reporting-dashboard.page.html
@@ -1,9 +1,9 @@
 <div
 	class="customer-reporting w-100 h-100 overflow-hidden"
-	[ngStyle]="{'display':'grid', 'grid-template-columns':'50% 50%', 'grid-template-rows':'7% 45% 15% 30%', 'grid-gap': '1%'}"
+	[ngStyle]="{'display':'grid', 'grid-template-columns':'50% 50%', 'grid-template-rows':'7% 45% 15% 30%', 'grid-gap': '0.5vh 0.5vw'}"
 >
 	<div
-		[ngClass]="header"
+		class="header"
 		[ngStyle]="{'grid-column-start':'1', 'grid-column-end':'3',
 						'grid-row-start':'1', 'grid-row-end':'2'}"
 	>
@@ -20,7 +20,7 @@
 			<nb-card-body class="pt-0 overflow-hidden">
 				<div
 					class="w-100"
-					[ngStyle]="{'height':'40%', 'display':'grid', 'grid-template-columns':'25% 75%', 'grid-template-rows':'16% 10% 16% 16% 16% 16%'}"
+					[ngStyle]="{'height':'40%', 'display':'grid', 'grid-template-columns':'25% 75%', 'grid-template-rows':'20% 10% auto auto auto auto'}"
 				>
 					<div
 						[ngStyle]="{'grid-column-start':'1', 'grid-column-end':'2',
@@ -96,47 +96,31 @@
 			<nb-card-header>Consommation - Projet : MGC_IARD</nb-card-header>
 			<nb-card-body class="overflow-hidden">
 				<div class="w-100 h-50">
-					<canvas
-						baseChart
-						[chartType]="lineChartType"
-						[legend]="lineChartLegend"
-						[labels]="lineChartLabels"
-						[datasets]="lineChartData"
-						[options]="lineChartOptions"
+					<app-signatures-chart
+						[signaturesChartLabels]="signaturesChartLabels"
+						[signaturesChartData]="signaturesChartData"
 					>
-					</canvas>
+					</app-signatures-chart>
 				</div>
-				<div class="row w-100 h-50 mt-4">
+				<div class="row w-100 h-50" [ngStyle]="{'justify-self': 'end'}">
 					<div class="col-md-4 h-100" [ngStyle]="{'width':'33%'}">
 						<div><span>Par rapport au mois dernier</span></div>
 						<div class="mt-2">
-							<canvas
-								baseChart
-								[chartType]="performanceChartType"
-								[legend]="performanceChartLegend"
-								[labels]="performanceChartLabels"
-								[data]="performanceChartData"
-								[options]="performanceChartOptions"
-								[plugins]="performanceChartPlugins"
-								[colors]="colors"
+							<app-performance-chart
+								[performanceChartMiddleText]="performanceChartMiddleTextLastMonth"
+								[performanceChartData]="performanceChartDataLastMonth"
 							>
-							</canvas>
+							</app-performance-chart>
 						</div>
 					</div>
 					<div class="col-md-4 offset-md-4 h-100" [ngStyle]="{'width':'33%'}">
 						<div><span>Déploiement</span></div>
 						<div class="mt-4">
-							<canvas
-								baseChart
-								[chartType]="performanceChartType"
-								[legend]="performanceChartLegend"
-								[labels]="performanceChartLabels"
-								[data]="performanceChartData"
-								[options]="performanceChartOptions"
-								[plugins]="performanceChartPlugins"
-								[colors]="colors"
+							<app-performance-chart
+								[performanceChartMiddleText]="performanceChartMiddleTextDeployment"
+								[performanceChartData]="performanceChartDataDeployment"
 							>
-							</canvas>
+							</app-performance-chart>
 						</div>
 					</div>
 				</div>
@@ -150,11 +134,11 @@
 						'grid-row-start':'3', 'grid-row-end':'5'}"
 	>
 		<nb-card class="w-100 h-100">
-			<nb-card-header [ngStyle]="{'height':'15%'}">Situation commerciale</nb-card-header>
+			<nb-card-header>Situation commerciale</nb-card-header>
 			<nb-card-body class="pt-0 overflow-hidden">
 				<div
 					class="w-100"
-					[ngStyle]="{'height':'40%', 'display':'grid', 'grid-template-columns':'20% 30% 20% 30%', 'grid-template-rows':'16% 16% 16% 4% 16% 16% 16%'}"
+					[ngStyle]="{'height':'40%', 'display':'grid', 'grid-template-columns':'20% 30% 20% 30%', 'grid-template-rows':'auto auto auto 6% auto auto auto'}"
 				>
 					<div
 						class="d-flex justify-content-center"
@@ -279,7 +263,7 @@
 
 	<div
 		class="ticketing"
-		[ngStyle]="{'min-width':'450px', 'grid-column-start':'2', 'grid-column-end':'3',
+		[ngStyle]="{'min-width':'500px', 'grid-column-start':'2', 'grid-column-end':'3',
 						'grid-row-start':'4', 'grid-row-end':'5'}"
 	>
 		<nb-card class="w-100 h-100">
@@ -289,28 +273,19 @@
 					<div class="col-6 col-md-4 h-100">
 						<div><span>Satisfaction Support</span></div>
 						<div class="mt-2">
-							<canvas
-								baseChart
-								[chartType]="doughnutChartType"
-								[legend]="dougnnutChartLegend"
-								[labels]="doughnutChartLabels"
-								[data]="doughnutChartData"
-								[options]="doughnutChartOptions"
-								[plugins]="doughnutChartPlugins"
+							<app-satisfaction-chart
+								[satisfactionChartMiddleText]="satisfactionChartMiddleText"
+								[satisfactionChartData]="satisfactionChartData"
 							>
-							</canvas>
+							</app-satisfaction-chart>
 						</div>
 					</div>
 					<div class="col-12 col-md-8 h-100">
-						<canvas
-							baseChart
-							[chartType]="barChartType"
-							[legend]="barChartLegend"
-							[labels]="barChartLabels"
-							[datasets]="barChartData"
-							[options]="barChartOptions"
+						<app-tickets-chart
+							[ticketsChartLabels]="ticketsChartLabels"
+							[ticketsChartData]="ticketsChartData"
 						>
-						</canvas>
+						</app-tickets-chart>
 					</div>
 				</div>
 			</nb-card-body>
