feat: universign theme

--- a/src/features/customer-reporting/dashboard/pages/customer-reporting-dashboard.page.html
+++ b/src/features/customer-reporting/dashboard/pages/customer-reporting-dashboard.page.html
@@ -273,11 +273,11 @@
 					<div class="col-6 col-md-4 h-100">
 						<div><span>Satisfaction Support</span></div>
 						<div class="mt-2">
-							<app-satisfaction-chart
-								[satisfactionChartMiddleText]="satisfactionChartMiddleText"
-								[satisfactionChartData]="satisfactionChartData"
+							<app-satisfaction-circle-chart
+								[satisfactionCircleChartMiddleText]="satisfactionChartMiddleText"
+								[satisfactionCircleChartData]="satisfactionChartData"
 							>
-							</app-satisfaction-chart>
+							</app-satisfaction-circle-chart>
 						</div>
 					</div>
 					<div class="col-12 col-md-8 h-100">
