feat: MRR service

--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -106,8 +106,7 @@
 							[ngStyle]="{'grid-column-start':'2', 'grid-column-end':'3',
 									'grid-row-start':'1', 'grid-row-end':'3'}"
 						>
-							<app-mrr-chart [mrrChartLabels]="mrrChartLabels" [mrrChartData]="mrrChartData">
-							</app-mrr-chart>
+							<app-mrr-chart> </app-mrr-chart>
 						</div>
 					</div>
 					<div
