--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -110,15 +110,12 @@
 						</div>
 					</div>
 					<div
-						class="overview_signatures"
+						class="overview_products"
 						[ngStyle]="{'grid-column-start':'2', 'grid-column-end':'3',
 									'grid-row-start':'1', 'grid-row-end':'3'}"
 					>
-						<app-signatures-chart
-							[signaturesChartLabels]="signaturesChartLabels"
-							[signaturesChartData]="signaturesChartData"
-						>
-						</app-signatures-chart>
+						<app-products-chart [labels]="productsChartLabels" [datasets]="productsChartData">
+						</app-products-chart>
 					</div>
 				</div>
 			</nb-card-body>
