--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -114,8 +114,7 @@
 						[ngStyle]="{'grid-column-start':'2', 'grid-column-end':'3',
 									'grid-row-start':'1', 'grid-row-end':'3'}"
 					>
-						<app-products-chart [labels]="productsChartLabels" [datasets]="productsChartData">
-						</app-products-chart>
+						<app-products-chart> </app-products-chart>
 					</div>
 				</div>
 			</nb-card-body>
