Fake invoices service implemented

--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -169,11 +169,7 @@
 			</nb-card-header>
 			<nb-card-body class="overflow-hidden p-0">
 				<div>
-					<app-invoices-chart
-						[invoicesChartLabels]="invoicesChartLabels"
-						[invoicesChartData]="invoicesChartData"
-					>
-					</app-invoices-chart>
+					<app-invoices-chart> </app-invoices-chart>
 				</div>
 			</nb-card-body>
 		</nb-card>
