test: tslint ci

--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -137,8 +137,8 @@
 				</div>
 			</nb-card-header>
 			<nb-card-body class="overflow-hidden pt-0 pb-0">
-				<div class="row w-100 h-100 projects_body">
-					<div class="col-6 col-md-4 h-100">
+				<div class="row w-100 h-100 dflex projects_body">
+					<div class="col-6 col-md-4 m-auto">
 						<app-projects-overview-chart> </app-projects-overview-chart>
 					</div>
 					<div class="col-12 col-md-8 h-100">
