Fake tickets service implemented with global colors universign.

--- a/src/features/customer-reporting/dashboard/pages/customer-reporting-dashboard.page.html
+++ b/src/features/customer-reporting/dashboard/pages/customer-reporting-dashboard.page.html
@@ -277,11 +277,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-8 h-100">
-						<app-tickets-chart
-							[ticketsChartLabels]="ticketsChartLabels"
-							[ticketsChartData]="ticketsChartData"
-						>
-						</app-tickets-chart>
+						<app-tickets-chart>	</app-tickets-chart>
 					</div>
 				</div>
 			</nb-card-body>
