--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -196,11 +196,7 @@
 						<div id="app-satisfaction-chart" [ngStyle]="{'height': '115px', 'margin': '1em auto'}"></div>
 					</div>
 					<div class="col-12 col-md-8 h-100">
-						<app-tickets-chart
-							[ticketsChartLabels]="ticketsChartLabels"
-							[ticketsChartData]="ticketsChartData"
-						>
-						</app-tickets-chart>
+						<app-tickets-chart>	</app-tickets-chart>
 					</div>
 				</div>
 			</nb-card-body>
