fix: tslint prettier and project timeline component

--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -142,10 +142,7 @@
 						<app-projects-overview-chart> </app-projects-overview-chart>
 					</div>
 					<div class="col-12 col-md-8 h-100">
-						<div
-							id="app-projects-chart"
-							[ngStyle]="{'min-width': '400px', 'max-width': '600px', 'margin': '0 auto'}"
-						></div>
+						<app-projects-timeline-chart> </app-projects-timeline-chart>
 					</div>
 				</div>
 			</nb-card-body>
