--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -188,12 +188,12 @@
 				</div>
 			</nb-card-header>
 			<nb-card-body class="overflow-hidden">
-				<div class="row w-100 h-100">
-					<div class="col-6 col-md-4 h-100">
-						<div id="app-satisfaction-chart" [ngStyle]="{'height': '115px', 'margin': '1em auto'}"></div>
+				<div class="row w-100 h-100 dflex">
+					<div class="col-6 col-md-4 m-auto">
+						<app-satisfaction-chart> </app-satisfaction-chart>
 					</div>
 					<div class="col-12 col-md-8 h-100">
-						<app-tickets-chart>	</app-tickets-chart>
+						<app-tickets-chart> </app-tickets-chart>
 					</div>
 				</div>
 			</nb-card-body>
